# Audio-Zero-Trust

./: .gitignore  README.md  azt.conf.example  requirements.txt
.secrets/: e2e.example.env
client/: README.md
client/test/hil/: audio_baseline_check.py  cli_contract_smoke.py  e2e_runner.py  echo_base_gain_sweep.py  echo_base_pcm_capture.py  flash_from_ota_smoke.py  libtest_companion.py  tls_ca_smoke.py  tls_https_state_smoke.py  usb_turn_based_probe.py
client/test/unit_sdk/: conftest.py  test_attestation_service.py  test_build_service.py  test_certificate_service.py  test_crypto_service.py  test_device_service.py  test_operations_service.py  test_provisioning_service.py  test_sdk_errors.py  test_stream_service.py  test_tls_service.py  test_url_service.py
client/tools/: azt_tool.py  improv_provision.py  provision_unit.py  validate_azt1.py
client/tools/azt_cli/: __init__.py  argparsing.py  commands.py  (+38 more)
docs/: error-contract.md  error-handling-improvements-001-plan.md  firmware-signing-quickstart.md  serial-flash-profiles.md
firmware/audio_zero_trust/: platformio.ini
firmware/releases/: OTA-Audio-Zero-Trust-20260322.otabundle  OTA-Audio-Zero-Trust-20260323.otabundle
recorder/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
recorder/src/azt_recorder/: config.py  discovery.py  main.py  models.py  recorder.py  supervisor.py  trust.py  verifier.py
recorder/tests/: test_ots_manifest.py  tsa_ltv_capture.py
scripts/: ota_feedback_loop.py  ota_smoke_test.py
spec/: compatibility-policy.md  crypto-container.md  detached-artifacts.md
(+81 files in other folders)
